--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,14 @@
-body {
-  margin: 0;
-}
+@use './normalize.scss';
+@use './blocks/container.scss';
+@use './blocks/page';
+@use './blocks/header';
+@use './blocks/top-bar';
+@use './blocks/nav';
+@use './blocks/icon';
+@use './blocks/menu';
+@use './blocks/about-us.scss';
+@use './blocks/button.scss';
+@use './blocks/cards.scss';
+@use './blocks/compare.scss';
+@use './blocks/details.scss';
+@use './blocks/contacts.scss';
